css/style.css
/* Author: Lily Wu
   Date: June 10, 2017 */

   #topRow {
    margin: 40px auto;
    width: 90%;
   }

   #heading {
    height: 80px;
    float: left;
    font-size: 45px;
    font-family: Arial, sans-serif;
   }

   .colorBoxes {
    height: 80px;
    width: 100px;
    border: 2px solid black;
    float: right;
    margin: 0 0 0 10px;
   }

   #yellowBox {
    background-color: yellow;
   }

   #blueBox {
    background-color: blue;
   }

   #redBox {
    background-color: red;
   }

   .gridRow {
    height: 80px;
    margin: 0 0 0 10px;
   }

   .square {
    height: 80px;
    float: left;
    border: 2px solid #d3d3d3;
   }

   #bottomRow {
    margin: 20px;
    width: 90%;
   }

   #clearButton {
    float: right;
    font-size: 20px;
    background-color: white;
    border-radius: 5px;
    border: 2px solid black;
    margin: 0 5px 0 0;
   }

   #newGridButton {
    float: right;
    font-size: 20px;
    background-color: white;
    border-radius: 5px;
    border: 2px solid black;
   }

   #dialog {
    text-align: center;
   }

   .clearfix:after {
    visibility: hidden;
    display: block;
    font-size: 0;
    content: " ";
    clear: both;
    height: 0;
  }

